--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,10 +36,12 @@ dist.jlink.output=${dist.jlink.dir}/unnamedlibrary
 endorsed.classpath=
 excludes=
 file.reference.flatlaf-1.0.jar=src/unnamedlibrary/flatlaf-1.0.jar
+file.reference.joda-time-2.10.10.jar=src/unnamedlibrary/joda-time-2.10.10.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.flatlaf-1.0.jar}
+    ${file.reference.flatlaf-1.0.jar}:\
+    ${file.reference.joda-time-2.10.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
