Added manual date setter for borrowing and did some changes to client and book view behavior

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,11 +37,13 @@ endorsed.classpath=
 excludes=
 file.reference.flatlaf-1.0.jar=src/unnamedlibrary/flatlaf-1.0.jar
 file.reference.joda-time-2.10.10.jar=src/unnamedlibrary/joda-time-2.10.10.jar
+file.reference.LGoodDatePicker-11.2.1.jar=src/unnamedlibrary/LGoodDatePicker-11.2.1.jar
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=\
     ${file.reference.flatlaf-1.0.jar}:\
-    ${file.reference.joda-time-2.10.10.jar}
+    ${file.reference.joda-time-2.10.10.jar}:\
+    ${file.reference.LGoodDatePicker-11.2.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -77,7 +79,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=unnamedlibrary
-main.class=unnamedlibrary.Unnamedlibrary
+main.class=unnamedlibrary.unnamedLoginMenu
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
