Added reset function for borrow, return, renew, history, book and client

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,13 +37,11 @@ endorsed.classpath=
 excludes=
 file.reference.flatlaf-1.0.jar=src/unnamedlibrary/flatlaf-1.0.jar
 file.reference.joda-time-2.10.10.jar=src/unnamedlibrary/joda-time-2.10.10.jar
-file.reference.LGoodDatePicker-11.2.1.jar=src/unnamedlibrary/LGoodDatePicker-11.2.1.jar
 includes=**
 jar.compress=true
 javac.classpath=\
     ${file.reference.flatlaf-1.0.jar}:\
-    ${file.reference.joda-time-2.10.10.jar}:\
-    ${file.reference.LGoodDatePicker-11.2.1.jar}
+    ${file.reference.joda-time-2.10.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
